# django-docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/app/: settings.py
app/app/settings/: __init__.py  database.py
dockers/nginx/: nginx.conf
dockers/postgres/docker-entrypoint-initdb.d/: init.sh
src/config/settings/: __init__.py
